# sw

./: .gitignore  LICENSE  README.md  build.sh  meson.build  meson_options.txt  new_renderer_and_text_processing_rsvg_test.h  new_renderer_and_text_processing_test.c  new_renderer_and_text_processing_test_build.sh  su.h  sutil.h  sw.c  sw.h  swidgets.h
examples/: meson.build  python
examples/common/: sw-json.h
examples/sw_swaybar/: .gitignore  README.md  build.sh  config.h  sni_server.h  sw_swaybar.c  sway_ipc.h  xdg_icon_theme.h
examples/sw_swaybg/: .gitignore  README.md  build.sh  sw_swaybg.c
examples/swaybar/: config.h  meson.build  sni-server.h  sway-ipc.h  swaybar.c  xdg-icon-theme.h
include/: json.h  macros.h  sw.h  util.h
subprojects/: basu.wrap
subprojects/resvg/: build.sh  meson.build
subprojects/tinyexpr/: meson.build  tinyexpr.c  tinyexpr.h
