option(
	'text_blocks',
	type: 'feature',
	value: 'enabled',
)

# image formats
option(
	'png_image_blocks',
	type: 'feature',
	value: 'enabled',
)
option(
	'svg_image_blocks',
	type: 'feature',
	value: 'enabled',
)
option(
	'jpg_image_blocks',
	type: 'feature',
	value: 'enabled',
)
option(
	'tga_image_blocks',
	type: 'feature',
	value: 'enabled',
)
option(
	'bmp_image_blocks',
	type: 'feature',
	value: 'enabled',
)
option(
	'psd_image_blocks',
	type: 'feature',
	value: 'enabled',
)
option(
	'gif_image_blocks',
	type: 'feature',
	value: 'enabled',
)
option(
	'hdr_image_blocks',
	type: 'feature',
	value: 'enabled',
)
option(
	'pic_image_blocks',
	type: 'feature',
	value: 'enabled',
)
option(
	'pnm_image_blocks',
	type: 'feature',
	value: 'enabled',
)

option(
	'swaybar_example',
	type: 'boolean',
	value: true,
)
option(
	'swaybar_example_systray',
	type: 'feature',
	value: 'enabled',
)

option(
	'fuzz_test',
	type: 'boolean',
	value: false,
)
